--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?mkfykjc#1" target="_blank">首页</a> | <a href="https://dlvlk7o3qgp9v.cloudfront.net/1?arxgho" target="_blank">动态网</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/2?flkoqyx" target="_blank">大纪元</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/4?rbdqajja" target="_blank">看中国</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/pHh5q?ydwkeju" target="_blank">新生网</a> | <a href="https://d3vg08phoazui6.cloudfront.net/tktpt?qldmzs" target="_blank">阿波罗网</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/Mjpvu?wmhfeydrs" target="_blank">干净世界</a> | <a href="https://d1lulvfep8g527.cloudfront.net/10?igiup" target="_blank">退党服务</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/Rffqf?izgfmxxct" target="_blank">明慧广播</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/nw9Vn?aaqfxp" target="_blank">传奇时代</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/AF9AG?jqmhlj" target="_blank">新境界影视</a> | <a href="https://dep6yudto3kbo.cloudfront.net/zqMQA?xmpdbc" target="_blank">文昭谈论</a> | <a href="https://d3d2r098q79b5l.cloudfront.net/7?ujirtbc" target="_blank">明慧</a></p><p><a href="https://d2a8dyhoj0w562.cloudfront.net/9?cpimwqk" target="_blank">大法</a> | <a href="https://d1b0mjr6ppvor4.cloudfront.net/3?jswpxskis" target="_blank">新唐人</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/obAhT?uyjuyngne" target="_blank">人民报</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/xXNHu?ljnre" target="_blank">放光明</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/5?oiwexmne" target="_blank">新纪元</a> | <a href="https://d2oemtubh889hy.cloudfront.net/6?djnyjw" target="_blank">希望之声</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/11?iuxuunt" target="_blank">无界网络</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/Pueji?mnrvg" target="_blank">追查国际</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/16?ufqli" target="_blank">明慧之窗</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/LdvzZ?vuaamehc" target="_blank">细语人生</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/fBn3r?mojozrdx" target="_blank">新世纪影视</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/PUWMb?jfrgje" target="_blank">江峰时刻</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/8?psyjaikd" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?mysnpygz#1" target="_blank">首页</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/1?pptzh" target="_blank">动态网</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/2?dowjjgdxp" target="_blank">大纪元</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/4?pzgvi" target="_blank">看中国</a> | <a href="https://dgk92ykceobaf.cloudfront.net/pHh5q?ykjgf" target="_blank">新生网</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/tktpt?uwxbihkp" target="_blank">阿波罗网</a> | <a href="https://d2184d78prq5kd.cloudfront.net/Mjpvu?cwvmspvd" target="_blank">干净世界</a> | <a href="https://d2jsgnf2snq1t5.cloudfront.net/10?ddecf" target="_blank">退党服务</a> | <a href="https://db8nk66phkh66.cloudfront.net/Rffqf?adgkyebfl" target="_blank">明慧广播</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/nw9Vn?btorfzbb" target="_blank">传奇时代</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/AF9AG?hrlgey" target="_blank">新境界影视</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/zqMQA?iilltc" target="_blank">文昭谈论</a> | <a href="https://dme0bxbvomkno.cloudfront.net/7?dvjre" target="_blank">明慧</a></p><p><a href="https://dlph7fabhsbfp.cloudfront.net/9?xhnpme" target="_blank">大法</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/3?basobwn" target="_blank">新唐人</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/obAhT?lajbtv" target="_blank">人民报</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/xXNHu?wodvt" target="_blank">放光明</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/5?pfueyy" target="_blank">新纪元</a> | <a href="https://d3malt9gyhsmb.cloudfront.net/6?audavjvuq" target="_blank">希望之声</a> | <a href="https://dmepc9x6zy689.cloudfront.net/11?shqljdetu" target="_blank">无界网络</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/Pueji?dfrylat" target="_blank">追查国际</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/16?auhbwzm" target="_blank">明慧之窗</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/LdvzZ?imjzdbmt" target="_blank">细语人生</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/fBn3r?ritoklrcj" target="_blank">新世纪影视</a> | <a href="https://d1vp4chj90rvdj.cloudfront.net/PUWMb?sfzdjdds" target="_blank">江峰时刻</a> | <a href="https://divmj5v44rbg.cloudfront.net/8?ypjuhmdm" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279221.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/06/id14279224-GettyImages-2159618420-320x200.jpg"><p align="center">拜登川普首轮辩论 两党政要与选民怎么看</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279221.md#1" title="拜登川普首轮辩论 两党政要与选民怎么看""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14279224-GettyImages-2159618420-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279191.md#1" title="欧盟宣布新领导层人选 冯德莱恩获连任提名""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14267581-GettyImages-2156203285-320x200.jpg">&nbsp;</a>
@@ -13,17 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278691.md#1" title="【名家专栏】增税并不等于增加政府收入""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278694-GettyImages-460635292-1080x720-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278786.md#1" title="数千名中国科技工作者未获印度签证""><img width="73" src="https://i.epochtimes.com/assets/uploads/2017/07/1707130252431758-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279263.md#1">台湾一周天气预报 留意短暂阵雨 带雨具</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279175.md#1">大陆多地房价跌跌不休 南昌业主亏30万卖房</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279222.md#1">视导新兵训练 赖清德：面对威胁 须做准备</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279263.md#1">台湾一周天气预报 留意短暂阵雨 带雨具</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279175.md#1">大陆多地房价跌跌不休 南昌业主亏30万卖房</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279221.md#1">拜登川普首轮辩论 两党政要与选民怎么看</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279213.md#1">正部级董云虎被查前后 多名相关官员被处理</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279172.md#1">李尚福遭公开处理 秦刚命运留悬念</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279191.md#1">欧盟宣布新领导层人选 冯德莱恩获连任提名</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279172.md#1">李尚福遭公开处理 秦刚命运留悬念</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278024.md#1">中国经济低迷 物流仓库和工业园区大量空置</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278076.md#1">中国体坛持续震荡 象棋特级大师王天一被查</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278505.md#1">消息：中国国企设年薪上限 要求员工退薪</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277417.md#1">【翻墙必看】实拍大陆实体店的空空荡荡</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278028.md#1">美驻华大使：中共支持俄罗斯是重大错误</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278215.md#1">中国医学博士生苦读六年拿不到学位 上网求助</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278396.md#1">【翻墙必看】中国“绝望世代”的背后</a><br>
@@ -97,13 +96,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/23/n14275497.md#1">【时事金扫描】占领拉法 以色列开辟第二战场</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14275030.md#1">前上海公职人员：防疫封城是场政治运动</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/23/n14275551.md#1">13省市今起有暴雨 湖南多城区被淹</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://df5qh6z1rslsu.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://df5qh6z1rslsu.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 39,047</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2f60np34802e3.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2f60np34802e3.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2f60np34802e3.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 39,047</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 432,408,666 人
+!共 432,410,712 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278901.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278913-xingjianFotoJet-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278901.md#1">邢鉴抗议活动中被殴 吁新西兰对外国干预立法</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278372.md#1">重庆妇女控诉 医疗事故导致其家破人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278214.md#1">蒙古国知名歌手演出被中共取消</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278153.md#1">制作高智晟壁画了愿 教师逃美找到人生新起点</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277784.md#1">中国民主党两主席陷囹圄 海外党员吁中共释放</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277221.md#1">新报告揭器官移植产业背后中共活摘暴行</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279175.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2016/10/1610060325141758-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279175.md#1">大陆多地房价跌跌不休 南昌业主亏30万卖房</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278958.md#1">大陆电动汽车保费高企 车主被逼卖车</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279134.md#1">中国房企远洋集团遭清盘呈请 股价跌10%</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14278967.md#1">中国百亿级主动益类基金数量三年锐减近七成</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278952.md#1">小米集团股价暴跌 拖累香港科技股普跌</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278767.md#1">新疆奴工案 维吾尔组织赢上诉 Shein伦敦上市遇阻</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279213.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14134752-dong-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279213.md#1">正部级董云虎被查前后 多名相关官员被处理</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279084.md#1">三任火箭军司令齐出事 李尚福或对魏凤和行贿</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278885.md#1">人民币频碰2%浮动下限 专家警告政策变更风险</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278828.md#1">菲总统称需加强抗共 白宫重申对菲铁杆承诺</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278595.md#1">上海前人大主任受审 曾被指帮情妇获政协委员资格</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278503.md#1">中共党媒高官称记者写稿要当奏折写 引热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278534.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276271-6190399658d0aa81774f0f6c042a418d-e1719478794476-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278534.md#1">6省34条河流现超警洪水 湘江洪峰过境长沙</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278369.md#1">长春房屋坍塌酿5伤1失踪 民拍视频被威胁</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277700.md#1">浙江水亭门古城墙北段坍塌 现场画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277679.md#1">云南丽江17分钟连发3次地震 最高4.5级</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277472.md#1">长江中下游干支流水位再涨 恐发生城市内涝</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277319.md#1">中国经济衰退冲击养老院 农村现“退院潮”</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278580.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278580.md#1">上海知名橱柜公司“全屋定制”门店人去楼空</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277952.md#1">苏州袭击事件后 旅居上海的日本人提高警觉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277745.md#1">接连2起外国人遇袭案 中共被指放任仇外情绪</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277535.md#1">“高考达人”梁实再落榜 称“心情烂透了”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277493.md#1">三退声明精选（2024/06/25）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277265.md#1">内蒙古一家五口灭门案 网曝嫌犯被逼急杀人</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268174-11_id13734986-000_9UB6PT-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1">中国学术界频造假 学者：像病毒在污染世界</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266062.md#1">高考首日 新课标作文题被吐槽 海南未发条形码</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265798.md#1">中国高考首用AI监控 被疑技术不完善恐有误判</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265024.md#1">揭秘：中共利用加国大学培养军事科学家</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263339.md#1">《64三十五年祭》作曲者：不曾褪色的使命</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259194.md#1">造假风气蔓延至香港 陆生以假文凭入读港大</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/4/2/n14216942.md#1">【独家】和两任总理闹矛盾 习经济会突离场</a><br>
